HUP-13 feat: email/password 회원가입 구현 (#13)
* HUP-13 chore: 인증 기반 설정 추가

* HUP-13 feat: 회원가입 사용자 모델 추가

* HUP-13 feat: 회원가입 요청 연결

* HUP-13 feat: 회원가입 사용자 저장

* HUP-13 feat: 회원 목록 조회 추가

* HUP-13 feat: 회원가입 확인 화면 보강

* HUP-13 docs: 커밋 기준 로그 정책 정리
